--- a/all/CMakeLists.txt
+++ b/all/CMakeLists.txt
@@ -10,6 +10,11 @@ include(../cmake/tools.cmake)
 # needed to generate test target
 enable_testing()
 
+message(STATUS "Building standalone")
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../standalone ${CMAKE_BINARY_DIR}/standalone)
+
+message(STATUS "Building test")
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../test ${CMAKE_BINARY_DIR}/test)
+
+message(STATUS "Building documentation")
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../documentation ${CMAKE_BINARY_DIR}/documentation)
